<resources>
    <string name="app_name">AuroraYemekSiparis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeWord">Home</string>
    <string name="favoriteWord">Favorites</string>
    <string name="profileWord">Profile</string>
    <string name="aurora">Aurora Food</string>
    <string name="price">0.00 ₺</string>
    <string name="productInfo">Our fresh and delicious products are at your door in a very short time.</string>
    <string name="deliveryInfo">Delivery Time</string>
    <string name="timeInfo">25-45 Mins</string>
    <string name="addCart">ADD TO CART</string>
    <string name="totalPrice">Total Price</string>
    <string name="shoppingCartTitle">Shopping Cart</string>
    <string name="pricePiece">Price:</string>
    <string name="piece">Piece:</string>
</resources>