<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shopCartFoodObject"
            type="com.ozcanfatihcan.aurorayemeksiparis.data.entity.ShopCartFood" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/shopping_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/cardColor"
            app:cardCornerRadius="30dp"
            app:cardElevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageShopFood"
                    android:layout_width="130dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

                <ImageView
                    android:id="@+id/shopDesignDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/delete_icon" />

                <View
                    android:id="@+id/verticalDivider"
                    android:layout_width="3dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/dividerColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/shopDesignDeleteButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textShopFoodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{shopCartFoodObject.yemek_adi}"
                    android:textColor="@color/text2"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imageShopFood"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/verticalDivider"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textShopPriceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/pricePiece"
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/verticalDivider"
                    app:layout_constraintTop_toBottomOf="@+id/textShopFoodName" />

                <TextView
                    android:id="@+id/textShopPieceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/piece"
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/verticalDivider"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/verticalDivider"
                    app:layout_constraintTop_toBottomOf="@+id/textShopPriceTitle"
                    app:srcCompat="@drawable/delivery_icon" />

                <TextView
                    android:id="@+id/delivertTimeShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/timeInfo"
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/textShopPrice" />

                <TextView
                    android:id="@+id/textShopPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text='@{Integer.toString(shopCartFoodObject.yemek_fiyat)+" ₺"}'
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textShopPriceTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textShopFoodName" />

                <TextView
                    android:id="@+id/textShopPiece"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@{Integer.t}"
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textShopPieceTitle"
                    app:layout_constraintTop_toBottomOf="@+id/delivertTimeShop" />

                <TextView
                    android:id="@+id/textShopTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/price"
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageShopFood" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>