<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailObject"
            type="com.ozcanfatihcan.aurorayemeksiparis.ui.fragment.DetailPageFragment" />
        <variable
            name="foodObject"
            type="com.ozcanfatihcan.aurorayemeksiparis.data.entity.Food" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor">

        <ImageView
            android:id="@+id/imageDetailFood"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="58dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/foodDetailCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/foodDetailCard"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="-35dp"
            app:cardBackgroundColor="@color/cardColor"
            app:cardCornerRadius="40dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/foodNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{foodObject.yemek_adi}"
                    android:textColor="@color/text2"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/productInfo"
                    android:textAlignment="center"
                    android:textColor="@color/textSubtext"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textPrice" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:srcCompat="@drawable/time_icon" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/deliveryInfo"
                    android:textColor="@color/textSubtext"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="9dp"
                    android:text="@string/timeInfo"
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text='@{Integer.toString(foodObject.yemek_fiyat)+" ₺"}'
                    android:textAlignment="center"
                    android:textColor="@color/text2"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/foodNameText" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/addedButton"
                    android:layout_width="235dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="-25dp"
                    android:layout_marginBottom="-5dp"
                    app:cardBackgroundColor="@color/addedButton"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/textAddCart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="32dp"
                            android:text="@string/addCart"
                            android:textColor="@color/text3"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:srcCompat="@drawable/rate4_icon" />

                <TextView
                    android:id="@+id/textTotalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/totalPrice"
                    android:textColor="@color/text2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.517"
                    app:layout_constraintStart_toEndOf="@+id/addedButton"
                    app:layout_constraintTop_toBottomOf="@+id/textPiece" />

                <TextView
                    android:id="@+id/textTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/price"
                    android:textColor="@color/text2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/addedButton"
                    app:layout_constraintTop_toBottomOf="@+id/textTotalTitle" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/increaseButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick='@{() -> detailObject.pieceControl("+",textPiece,textTotalPrice,foodObject.yemek_fiyat)}'
                    app:cardBackgroundColor="@color/addedButton"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toStartOf="@+id/textPiece"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundTint="#AA4646"
                        app:srcCompat="@drawable/add_icon" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textPiece"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/text2"
                    android:text="0"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/decreaseButton"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/decreaseButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:onClick='@{() -> detailObject.pieceControl("-",textPiece,textTotalPrice,foodObject.yemek_fiyat)}'
                    app:cardBackgroundColor="@color/addedButton"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/remove_icon" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/favButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/cardColor"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/favIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/favorite_empty_icon" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="78dp"
            android:elevation="5dp"
            android:onClick="@{() -> detailObject.processBackPress()}"
            app:cardBackgroundColor="@color/cardColor"
            app:cardCornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/back_icon" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>